--- a/package.json
+++ b/package.json
@@ -25,5 +25,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "http://www.weibenfalk.com/react_videoplayer/"
+  "homepage": "https://reactvideoplayer.netlify.com/"
 }
